[project]
name = "xlens"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Xiangchong Li", email = "mr.superonion@hotmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "ipykernel", # Support for Jupyter notebooks
]

[project.urls]
"Source Code" = "https://github.com/mr-superonion/xlens"

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
write_to = "xlens/__version__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
    "examples/anacal/"
]
addopts = "--nbval --nbval-lax --nbval-current-env -vv -s"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 80

[tool.flake8]
ignore = [
    "N801", "N802", "N803", "N806", "N815", "N816", "W503", "W504",
    "E133", "E203", "E303", "E731", "E226", "E228", "N812"
]
exclude = [".git", "__pycache__", "docs", "build", "dist"]
max-line-length = 80

[tool.coverage.run]
omit=["xlens/__version__.py"]
